--- a/paper/Appendices/AppendixC.tex
+++ b/paper/Appendices/AppendixC.tex
@@ -9,4 +9,11 @@
 Visualizer - LeapMotion provided 3D environment showing pointers in the observable 3D space
 Cocoa - Apple's Mac OS X programming library for windowed applications
 Templerun - A game designed for cell phones and tablets using the device's accelerometer to steer a runner through an obsticle course
+
+
+Libraries
+
+Cocos2d
+Box2d
+CControlExtension
 %Write your Appendix content here.
