--- a/paper/Bibliography.bib
+++ b/paper/Bibliography.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for cj at 2013-05-02 02:07:26 -0400 
+%% Created for cj at 2013-05-08 22:47:50 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@webpage{corel,
+	Author = {{Corel Corporation}},
+	Date-Added = {2013-05-09 02:46:44 +0000},
+	Date-Modified = {2013-05-09 02:47:50 +0000},
+	Lastchecked = {April 30 2013},
+	Url = {http://www.corel.com/corel/pages/index.jsp?pgid=14500169&storeKey=us&languageCode=en},
+	Year = {2013}}
 
 @webpage{unity,
 	Author = {{Unity Technologies}},
@@ -16,7 +24,8 @@
 	Keywords = {Unity},
 	Title = {{Unity SDK}},
 	Url = {http://unity3d.com/},
-	Year = {2013}}
+	Year = {2013},
+	Bdsk-Url-1 = {http://unity3d.com/}}
 
 @webpage{theverge,
 	Abstract = {Picture Reference},
