--- a/paper/main.tex
+++ b/paper/main.tex
@@ -86,6 +86,42 @@
 \end{titlepage}
 
 %----------------------------------------------------------------------------------------
+%	QUOTATION PAGE
+%----------------------------------------------------------------------------------------
+
+\pagestyle{empty} % No headers or footers for the following pages
+\begin{center}{\huge\bf MONTCLAIR STATE UNIVERSITY\par}\end{center}
+\begin{center}\ttitle\\
+by\\
+\authornames\end{center}
+\begin{center}
+A Master’s Project Submitted to the Faculty of\\
+Montclair State University \\
+In Partial Fulfillment of the Culminating Experience For the Degree of \\
+Master of Science in Computer Science\end{center}
+\begin{center}August 2012\end{center}
+\begin{center}College of Science and Mathematics, Department of Computer Science\end{center}
+The above project was presented on May 10th 2013\\
+\\
+Was IRB review needed (check one)   Yes    No\\
+\\
+If IRB was needed, provide the IRB Approval date and Protocol Number: \underline{\hspace{2cm}}\\
+\\
+The Project Committee attended the project presentation, read the project report and verifies that the project can be accepted as a culminating experience in accordance with the departmental and university guidelines.\\
+
+\underline{\hspace{9cm}}\\ % This prints a line for the signature
+Project Sponsor:    Dr. Jerry Alan Fails
+
+\underline{\hspace{9cm}}\\ % This prints a line for the signature
+Committee Member: Dr. Angel Gutierrez
+
+\underline{\hspace{9cm}}\\ % This prints a line for the signature
+Committee Member: Dr. John Jenq\\
+
+\vfill\vfill\vfill\vfill\vfill\vfill\null % Add some space at the bottom to position the quote just right
+
+\clearpage % Start a new page
+%----------------------------------------------------------------------------------------
 %	ABSTRACT PAGE
 %----------------------------------------------------------------------------------------
 
@@ -107,7 +143,7 @@ The LeapMotion Technology presents a new way of interacting with a computer syst
 
 \acknowledgements{\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
 
-I would like to express my sincerest gratitude to my supervisor Dr. Jerry Fails for his constructive comments and insights throughout the process of creating this master project. His enthusiasm for his craft is both inspiring and contagious. I would like to thank Montclair State University for the opportunity to study as part of their learning community. I would like to thank the faculty and staff of the University for... Furthermore, I would like to thank the members of KidsTeam for volunteering their time and energy to the work necessary to complete this project. I thank you for seeing a world of possibilities in the smallest of ideas. Finally, I would like to thank my family and friends for their unending love and support.
+I would like to express my sincerest gratitude to my supervisor Dr. Jerry Fails for his constructive comments and insights throughout the process of creating this master project. His enthusiasm for his craft is both inspiring and contagious. I would like to thank Montclair State University for the opportunity to study as part of their learning community. I would like to thank the faculty and staff of the University for sharing their knowledge and their time. Furthermore, I would like to thank the members of KidsTeam for volunteering their time and energy to the work necessary to complete this project. I thank you for seeing a world of possibilities in the smallest of ideas. Finally, I would like to thank my family and friends for their unending love and support.
 }
 \clearpage % Start a new page
 
